# meccanoid-tx1-project

./: README.md
Nytt/ArmTest/: ArmTest.ino
Nytt/ArmTest/ArmTest.ino/: ArmTest.ino.ino
Nytt/RosArmTest/: RosArmTest.ino
Nytt/RosArmWave/: RosArmWave.ino
Nytt/RosArmsAndHead/: RosArmsAndHead.ino
Nytt/Sweep2/: Sweep2.ino
Nytt/meccanoid_armservo_control/: meccanoid_armservo_control.ino
devel/: .catkin  .rosinstall  setup.sh
devel/include/meccanoid_tx1/: hedge_pos.h  meccanoid_map.h  meccanoid_map_pos.h
devel/lib/meccanoid_tx1/: meccanoid_obstacle_avoidance_node  meccanoid_position_visualization_node  meccanoid_positioning_node  meccanoid_teleop_node
devel/lib/pkgconfig/: meccanoid_tx1.pc
devel/lib/python2.7/dist-packages/meccanoid_tx1/msg/: __init__.py  _hedge_pos.py  _meccanoid_map.py  _meccanoid_map_pos.py
devel/share/common-lisp/ros/meccanoid_tx1/msg/: _package.lisp  _package_hedge_pos.lisp  _package_meccanoid_map.lisp  hedge_pos.lisp  meccanoid_map.lisp  meccanoid_map_pos.lisp  meccanoid_tx1-msg.asd
devel/share/gennodejs/ros/meccanoid_tx1/msg/: _index.js  hedge_pos.js  meccanoid_map.js  meccanoid_map_pos.js
devel/share/meccanoid_tx1/cmake/: meccanoid_tx1-msg-paths.cmake  meccanoid_tx1Config.cmake
devel/share/roseus/ros/meccanoid_tx1/: manifest.l
devel/share/roseus/ros/meccanoid_tx1/msg/: hedge_pos.l  meccanoid_map.l  meccanoid_map_pos.l
meccanoid_face_detection/: CMakeLists.txt  package.xml
meccanoid_face_detection/src/: meccanoid_face_detection_node.cpp
meccanoid_face_localization/: CMakeLists.txt  package.xml
meccanoid_face_localization/include/: meccanoid_servo_control.h
meccanoid_face_localization/src/: meccanoid_face_localization_node.cpp  meccanoid_servo_control.c
meccanoid_map/: CMakeLists.txt  package.xml
meccanoid_map/include/: map.hpp
meccanoid_map/msg/: meccanoid_map.msg
meccanoid_map/src/: map.cpp  meccanoid_map_node.cpp
meccanoid_motors/: CMakeLists.txt  package.xml
meccanoid_motors/include/: meccanoid_motor_control.h
meccanoid_motors/msg/: meccanoid_motor_control.msg
meccanoid_motors/src/: meccanoid_motor_control.c  meccanoid_motors_node.cpp
meccanoid_obstacle_avoidance/: CMakeLists.txt  package.xml
meccanoid_path_planning/: CMakeLists.txt  package.xml
meccanoid_path_planning/src/: meccanoid_path_planning_node.cpp
meccanoid_positioning/: CMakeLists.txt  package.xml
meccanoid_positioning/include/: marvelmind_hedge.h
meccanoid_positioning/src/: marvelmind_hedge.c  meccanoid_positioning_node.cpp
meccanoid_tx1/: .package.xml.swp  CMakeLists.txt  package.xml
meccanoid_tx1/msg/meccanoid_face_localization/: meccanoid_face_location.msg
meccanoid_tx1/msg/meccanoid_obstacle_avoidance/: meccanoid_obstacle_position.msg
meccanoid_tx1/msg/meccanoid_positioning/: hedge_pos.msg
meccanoid_tx1/src/meccanoid_face_detection/: .meccanoid_face_detection_node.cpp.swp  meccanoid_face_detection_node.cpp
meccanoid_tx1/src/meccanoid_face_localization/: meccanoid_face_localization_node.cpp  meccanoid_servo_control.c
meccanoid_tx1/src/meccanoid_map/: meccanoid_map_node.cpp
meccanoid_tx1/src/meccanoid_motors/: meccanoid_motor_control.c  meccanoid_motors_node.cpp
meccanoid_tx1/src/meccanoid_obstacle_avoidance/: .meccanoid_obstacle_avoidance_node.cpp.swp
meccanoid_tx1/src/meccanoid_path_planning/: .meccanoid_path_planning_node.cpp.swp  meccanoid_path_planning_node.cpp
meccanoid_tx1/src/meccanoid_positioning/: marvelmind_hedge.c  meccanoid_positioning_node.cpp  subscriber_test.cpp
meccanoid_tx1/src/meccanoid_teleop/: meccanoid_teleop_node.cpp
meccanoid_tx1/src/meccanoid_user_interface/: meccanoid_user_interface_node.cpp
meccanoid_tx1_arduino/meccanoid_motor_control/: meccanoid_motor_control.ino
meccanoid_tx1_arduino/meccanoid_servo_control/: meccanoid_servo_control.ino
meccanoid_user_interface/: CMakeLists.txt  package.xml
src/meccanoid_tx1/: CMakeLists.txt
src/meccanoid_tx1/include/meccanoid_map/: map.hpp
src/meccanoid_tx1/msg/meccanoid_map/: meccanoid_map_pos.msg
src/meccanoid_tx1/src/meccanoid_face_detection/: .meccanoid_face_detection_node.cpp.swp  meccanoid_face_detection_node.cpp
src/meccanoid_tx1/src/meccanoid_map/: map.cpp
src/meccanoid_tx1/src/meccanoid_obstacle_avoidance/: meccanoid_obstacle_avoidance_node V2.cpp  meccanoid_obstacle_avoidance_node.cpp  old_meccanoid_obstacle_avoidance_node.cpp
src/meccanoid_tx1/src/meccanoid_path_planning/: meccanoid_path_planning_node.cpp
src/meccanoid_tx1/src/meccanoid_teleop/: meccanoid_teleop_node.cpp
src/meccanoid_tx1_arduino/meccanoid_motor_control/: meccanoid_motor_control.ino
