<?xml version="1.0"?>
<package>
  <name>meccanoid_motors</name>
  <version>0.0.1</version>
  <description>The meccanoid_motors package</description>

  <maintainer email="this.package.is@not.maintained">hank</maintainer>

  <license>Use any way you like!</license>

  <author email="henke.linden@gmail.com">Henrik Linden</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>meccanoid_motor_control</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>meccanoid_motor_control</run_depend>

  <export>
    <!-- nothing to export yet! -->
  </export>
</package>