<?xml version="1.0"?>
<package>
  <name>meccanoid_path_planning</name>
  <version>0.0.1</version>
  <description>The meccanoid_path_planning package</description>

  <maintainer email="this.package.is@not.maintained">hank</maintainer>

  <license>Use any way you like!</license>

  <author email="meccanoid-tx1@gmail.com">Meccanoid TX1</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>meccanoid_motors</build_depend>
  <build_depend>meccanoid_positioning</build_depend>
  <build_depend>meccanoid_map</build_depend>
  <build_depend>meccanoid_map_representation</build_depend>
  <!--build_depend>message_generation</build_depend--> 
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>meccanoid_motors</run_depend>
  <run_depend>meccanoid_positioning</run_depend>
  <run_depend>meccanoid_map</run_depend>
  <run_depend>meccanoid_map_representation</run_depend>
  <!--run_depend>message_runtime</run_depend-->

  <export>
    <!-- nothing to export yet! -->
  </export>
</package>