<?xml version="1.0"?>
<package>
  <name>meccanoid_tx1</name>
  <version>0.0.1</version>
  <description>The meccanoid_tx1 package</description>

  <maintainer email="this.package.is@not.maintained">hank</maintainer>

  <license>BSD</license>

  <author email="henke.linden@gmail.com">Henrik Linden</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend> 
  <run_depend>OpenCV</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <!-- nothing to export yet! -->
  </export>
</package>
